Fix scrollbar issues

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -157,6 +157,14 @@ html::-webkit-scrollbar-thumb {
     margin-top: 0rem;
 }
 
+.blog-ol {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox, Safari 18.2+, Chromium 121+ */
+}
+.blog-ol::-webkit-scrollbar { 
+    display: none;  /* Older Safari and Chromium */
+}
+
 /* Google */
 @supports (background: paint(xxx)) {
     .blog-ol {
